# pluto

./: .gitignore  CMakeLists.txt  LICENSE  enter_docker_container.sh  readme.md
docker/: dockerfile  (+1 more)
docker/demo/pluto_shared_library_demo/: CMakeLists.txt
docker/demo/pluto_shared_library_demo/inc/: demo.h
docker/demo/pluto_shared_library_demo/src/: demo.c
pluto_config/: CMakeLists.txt  readme.md
pluto_config/inc/pluto/pluto_config/: pluto_config.h
pluto_config/src/: pluto_config.c  pluto_core_config.c
pluto_config/src/private/src/: pluto_file.c
pluto_config/test/: CMakeLists.txt
pluto_config/test/inc/: test_core_config.h  test_node_config.h  test_pluto_config.h  utils.h
pluto_config/test/ressources/core/: multiple_nodes_config.txt  node0.txt  node1.txt  node2.txt
pluto_config/test/ressources/node/: empty_node_config.txt  minimal_config.txt  multiple_output_queues_config.txt  python_config.txt
pluto_config/test/src/: test_core_config.c  test_node_config.c  test_pluto_config.c  utils.c
pluto_core/: CMakeLists.txt  readme.md
pluto_core/inc/pluto/pluto_core/application_layer/: pluto_core.h  pluto_core_state.h  pluto_node_state.h
pluto_core/inc/pluto/pluto_core/data_layer/: application_return_codes.h  pluto_core_register.h  pluto_sig_queue.h
pluto_core/src/application_interface_layer/: main.c
pluto_core/src/application_layer/: pluto_core.c  pluto_core_state.c  pluto_node_state.c
pluto_core/src/data_layer/: pluto_core_register.c  pluto_sig_queue.c
pluto_core/test/: CMakeLists.txt
pluto_core/test/ressources/config_files/: config.txt
pluto_core/test/src/: prepare.c  test_pluto_core.c  test_pluto_core_state.c  test_pluto_node_state.c
pluto_edge/: CMakeLists.txt  readme.md
pluto_edge/inc/pluto/pluto_edge/: pluto_edge.h
pluto_edge/src/: pluto_edge.c
pluto_edge/test/: CMakeLists.txt
pluto_edge/test/src/: test_pluto_edge.c  test_pluto_edge_main.c
pluto_event/: CMakeLists.txt  readme.md
pluto_event/inc/pluto/pluto_event/: pluto_event.h
pluto_event/src/: pluto_event.c
pluto_event/test/: CMakeLists.txt
pluto_event/test/src/: test_pluto_event.c  test_pluto_event_main.c
pluto_info/: CMakeLists.txt  readme.md
pluto_info/inc/pluto_info/: pc_info.h
pluto_info/src/: pc_info.c  pc_main.c
pluto_node/: CMakeLists.txt  readme.md
pluto_node/inc/pluto/: pluto_compile_time_switches.h  pluto_config.h  pluto_info.h  pluto_malloc.h  pluto_message_parser.h  pluto_message_queue.h  pluto_processor.h  pluto_semaphore.h  pluto_types.h
pluto_node/inc/pluto/application_interface_layer/: main.h
pluto_node/inc/pluto/application_layer/: pluto_compile_time_switches.h  pluto_config.h  pluto_info.h  pluto_processor.h
pluto_node/inc/pluto/application_layer/events/: event_definitions.h
pluto_node/inc/pluto/application_layer/python/: pluto_python.h
pluto_node/inc/pluto/application_layer/shared_library/: pluto_shared_library.h  pluto_shared_library_header.h
pluto_node/inc/pluto/os_abstraction_layer/: pluto_message_parser.h  pluto_message_queue.h  pluto_semaphore.h
pluto_node/inc/pluto/python/: pluto_python.h
pluto_node/inc/pluto/shared_library/: pluto_shared_library.h
pluto_node/inc/pluto/types/: pluto_types.h
pluto_node/src/: jsmn.c  main.c  pluto_config.c  pluto_info.c  pluto_malloc.c  pluto_message_parser.c  pluto_message_queue.c  pluto_processor.c  pluto_semaphore.c  pluto_types.c
pluto_node/src/application_interface_layer/: main.c
pluto_node/src/application_layer/: pluto_config.c  pluto_info.c  pluto_processor.c
pluto_node/src/application_layer/python/: pluto_python.c
pluto_node/src/application_layer/shared_library/: pluto_shared_library.c
pluto_node/src/os_abstraction_layer/: pluto_malloc.c  pluto_message_parser.c  pluto_message_queue.c  pluto_semaphore.c  pluto_types.c
pluto_node/src/python/: pluto_python.c
pluto_node/src/shared_library/: pluto_shared_library.c
pluto_node/test/: CMakeLists.txt
pluto_node/test/application_layer/: CMakeLists.txt
pluto_node/test/application_layer/src/: main.c  test_config.c
pluto_node/test/python/: main.py
pluto_node/test/ressources/: test_node_config.txt
pluto_node/test/ressources/python/: loopback.py
pluto_node/test/src/: main.c  test_processor.c  test_python.c
pluto_os_abstraction/: CMakeLists.txt  readme.md
pluto_os_abstraction/inc/pluto/os_abstraction/: pluto_logger.h  pluto_malloc.h  pluto_message_queue.h  pluto_os_abstraction_config.h  pluto_semaphore.h  pluto_shared_memory.h  pluto_time.h  pluto_types.h
pluto_os_abstraction/inc/pluto/os_abstraction/config/: pluto_compile_config.h
pluto_os_abstraction/inc/pluto/os_abstraction/files/: pluto_file.h
pluto_os_abstraction/inc/pluto/os_abstraction/signals/: pluto_signal.h
pluto_os_abstraction/inc/pluto/os_abstraction/system_events/: pluto_system_events.h
pluto_os_abstraction/src/: pluto_logger.c  pluto_malloc.c  pluto_message_queue.c  pluto_semaphore.c  pluto_shared_memory.c  pluto_time.c  pluto_types.c
pluto_os_abstraction/src/files/: pluto_file.c
pluto_os_abstraction/src/message_queue/custom_0/: pluto_custom_0_message_queue.c
pluto_os_abstraction/src/message_queue/system_v/: pluto_message_queue.c
pluto_os_abstraction/src/signals/: pluto_signal.c
pluto_os_abstraction/src/system_events/: pluto_system_events.c
pluto_os_abstraction/test/: CMakeLists.txt
pluto_os_abstraction/test/src/: test_os_abstraction_main.c  test_os_abstraction_messagequeue.c  test_os_abstraction_semaphore.c  test_pluto_time.c  test_signals.c  test_system_events.c
pluto_rw/: CMakeLists.txt  readme.md
pluto_rw/inc/pluto_rw/: prw_message_queue.h
pluto_rw/src/: main.c  prw_message_queue.c
plyto/: README.md  pyproject.toml  requirements.txt
plyto/src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt
plyto/src/plyto/_internal/: plyto_default_handler.py  plyto_venv.py
plyto/src/plyto/config/: plyto_config.py  plyto_core_config.py  plyto_node_config.py
plyto/src/plyto/core/: plyto_core.py  plyto_node.py
plyto/src/plyto/edge/: __init__.py  plyto_edge.py
plyto/test/: test_config.py  test_package.py
(+32 files in other folders)
